--- a/resmanage-admin/public/index.html
+++ b/resmanage-admin/public/index.html
@@ -6,7 +6,7 @@
     <meta name="renderer" content="webkit">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= webpackConfig.name %></title>
+    <title>多媒体资源管理系统</title>
   </head>
   <body>
     <script src=<%= BASE_URL %>/tinymce4.7.5/tinymce.min.js></script>
