添加api文档，修改文件架构

--- a/resmanage-api/apiDoc/index.html
+++ b/resmanage-api/apiDoc/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>res-api接口文档</title>
-  <meta name="description" content="res-api接口文档说明">
+  <meta name="description" content="没有描述">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <link href="assets/bootstrap.min.css" rel="stylesheet" media="screen">
