--- a/resmanage-uniapp/index.html
+++ b/resmanage-uniapp/index.html
@@ -2,6 +2,13 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <link rel="apple-touch-icon" href="/static/logo.png">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-title" content="chat">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <link rel="icon" type="image/svg+xml" href="/static/logo.svg" />
+    <meta name="theme-color" content="#f5f7fa">
+
     <script>
       var coverSupport = 'CSS' in window && typeof CSS.supports === 'function' && (CSS.supports('top: env(a)') ||
         CSS.supports('top: constant(a)'))
