--- a/resmanage-api/public/index.html
+++ b/resmanage-api/public/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="/static/img/uni.7c7c1d49.css">
+    <link rel="stylesheet" href="/static/img/uni.80ba41bb.css">
 
     <meta charset="UTF-8" />
+    <link rel="apple-touch-icon" href="/static/logo.png">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-title" content="chat">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <link rel="icon" type="image/svg+xml" href="/static/logo.svg" />
+    <meta name="theme-color" content="#f5f7fa">
+
     <script>
       var coverSupport = 'CSS' in window && typeof CSS.supports === 'function' && (CSS.supports('top: env(a)') ||
         CSS.supports('top: constant(a)'))
@@ -14,8 +21,8 @@
     <title>DHXT资源管理系统</title>
     <!--preload-links-->
     <!--app-context-->
-    <script type="module" crossorigin src="/static/js/index-66b20aa9.js"></script>
-    <link rel="stylesheet" href="/static/css/index-f3999392.css">
+    <script type="module" crossorigin src="/static/js/index-f256243b.js"></script>
+    <link rel="stylesheet" href="/static/css/index-c2b4224f.css">
   </head>
   <body>
     <div id="app"><!--app-html--></div>
